@@ -1,3 +1,8 @@
+2011-08-03  James Greenhalgh  <james.greenhalgh@arm.com>
+
+	* config/tc-arm.c (do_t_strexbh): New.
+	(insns): Update accordingly.
+
 2011-08-01  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR ld/13048
